# ReviewLens

./: .gitignore  QUICKSTART.md  README.md  ReviewLens Architecture & Implementation Guide 2.md  ReviewLens Architecture & Implementation Guide.md  ReviewLens.md  docker-compose.yml  fetch_hotel_reviews.py  hotel_reviews.csv
backend/: .env.example  Dockerfile  __init__.py  main.py  pipeline_graph.mmd  pyproject.toml  requirements.txt  testing.py
backend/agents/: cross_comparison_agent.py  deduplication_agent.py  embedding_agent.py  emoji_agent.py  export_agent.py  mentions_agent.py  orchestrator_agent.py  preprocessing_agent.py  recommendations_agent.py  report_agent.py  sentiment_agent.py  summary_agent.py  trend_agent.py
backend/core/: agent_bus.py  config.py  hotel_pipeline.py  llm_factory.py  models.py  pipeline.py
backend/data/: batch_digests.json  property_analysis_cache.json  summary_cache.json  synthetic_generator.py
backend/scrapers/: __init__.py  amazon_scraper.py  batch_digests.json  flipkart_scraper.py  hotel_reviews_processed.json  mock_data.py  property_analysis_cache.json  summary_cache.json
frontend/: .npmrc  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/public/: hotel_reviews_processed.json
frontend/src/: App.jsx
frontend/src/components/: AIChatAssistant.jsx
frontend/src/components/dashboard/: LiveFeedTicker.jsx  (+9 more)
frontend/src/pages/: DashboardPage.jsx  HotelDashboardPage.jsx  LandingPage.jsx  PropertyDashboardPage.jsx  ReviewPage.jsx  UploadPage.jsx
frontend/src/store/: hotelStore.js  reviewStore.js
frontend/src/styles/: globals.css
(+1 files in other folders)
