[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==24.1.0",
    "beautifulsoup4==4.12.3",
    "emoji==2.12.1",
    "faker==30.8.1",
    "fastapi==0.115.0",
    "google-genai>=1.0.0",
    "httpx==0.27.2",
    "langchain>=0.3.7",
    "langchain-community>=0.3.7",
    "langchain-google-genai>=2.1.0",
    "langchain-litellm>=0.4.0",
    "langdetect==1.0.9",
    "langgraph>=0.2.38",
    "lxml==5.3.0",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "pymongo>=4.17.0",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.1.2",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.12",
    "rapidfuzz==3.10.0",
    "reportlab==4.2.5",
    "requests==2.32.3",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "sentence-transformers==3.2.1",
    "uvicorn[standard]==0.30.6",
]
