[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.12.3",
    "emoji==2.12.1",
    "fastapi==0.115.0",
    "google-genai>=1.0.0",
    "langchain>=0.3.7",
    "langchain-community>=0.3.7",
    "langchain-google-genai>=2.1.0",
    "langdetect==1.0.9",
    "langgraph>=0.2.38",
    "litellm>=1.0.0",
    "lxml==5.3.0",
    "numpy==1.26.4",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-multipart==0.0.12",
    "rapidfuzz==3.10.0",
    "reportlab==4.2.5",
    "requests==2.32.3",
    "uvicorn[standard]==0.30.6",
]
